# biolookup

./: .bumpversion.cfg  .cruft.json  .flake8  CITATION.cff  CONTRIBUTING.rst  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/biolookup/: __init__.py  __main__.py  api.py  cli.py  constants.py  version.py
src/biolookup/app/: __init__.py  __main__.py  backends.py  blueprints.py  charts.py  cli.py  proxies.py  wsgi.py
src/biolookup/app/templates/: base.html  entity.html  footer.html  home.html  statistics.html  summary.html
src/biolookup/app/templates/meta/: about.html  access.html  download.html
src/biolookup/backends/: __init__.py  backend.py  memory_backend.py  remote_backend.py  resolve.py  sql_backend.py
src/biolookup/db/: __init__.py  __main__.py  cli.py  loader.py
tests/: __init__.py  test_backend.py  test_db.py  test_version.py
