##########################
# Setup.py Configuration #
##########################
[metadata]
name = biolookup
version = 0.2.0-dev
description = Get metadata and ontological information about all biomedical entities.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/biopragmatics/biolookup
download_url = https://github.com/biopragmatics/biolookup/releases
project_urls =
    Bug Tracker = https://github.com/biopragmatics/biolookup/issues
    Source Code = https://github.com/biopragmatics/biolookup

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter

[options]
install_requires =
    # Use progress bars excessively
    tqdm
    # Command line tools
    click
    more_click
    # Web requirements
    pyobo>=0.6.3
    flask
    bootstrap-flask
    flasgger
    psutil
    sqlalchemy
    psycopg2-binary
    tabulate

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    # texext

[options.entry_points]
console_scripts =
    biolookup = biolookup.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = biolookup
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/biolookup
    .tox/*/lib/python*/site-packages/biolookup

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    S301 # pickle
    S403 # pickle
    S404
    S603
    W503 # Line break before binary operator (flake8 is wrong)
    B019
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    biolookup
    tests
